feat(yaml-core): maximise type safety — sealed types, builder, YAML UX
- ParsedValue sealed interface replaces Object return from ParameterType.parse()
  (StringValue, IntegerValue, NumberValue, BooleanValue, ListValue)
- ForEachDirective sealed interface replaces Object in ForEachAdapter.getForEach()
  (GroupRef, InlineIteration — eliminates instanceof String/Map duck-typing)
- YamlModuleParameter.builder() with constraint/type coherence validation
  (minimum/maximum only for INTEGER/NUMBER, minLength/maxLength only for STRING/LIST)
- ExpansionOptions config record replaces positional deserializer/rewriter params
- CsvColumnType.DECIMAL renamed to NUMBER (aligns with ParameterType.NUMBER)
- Type-aware allowedValues: canonical form comparison for BOOLEAN/INTEGER/NUMBER
- YamlModuleOutput: compact constructor with null guards
- IterationGroup: reject invalid types at construction
- ParameterViolation: technicalDetail always populated (never null)
- VariableResolver: resolve() uses <root> instead of empty string for elementContext
- ExpandedModule.section(): remove false generic — return Map<String, Object>
- importConditions: unconditional imports absent from map (Map.copyOf consistency)
- VariableResolver.resolveList() returns List<Object> instead of List<?>
- New module.schema.json: JSON Schema for parameters, outputs, imports
- CLAUDE.md: yaml-core module description updated

Closes #261

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>